# clearing-day-ics

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml  generate.yaml
clearing_day_ics/src/clearing-day-ics/: client.py  generate.py  model.py
gh_pages_files/: index.html  six_clearingday_prod.ics  six_clearingday_test.ics
